// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`lineChart > renders correctly when data is async 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      style="height: 537px;"
    >
      <div
        style="width: 100%; height: 100%;"
      />
    </div>
    <div
      class="styles__8i9lug5"
    >
      <div
        class="styles__8i9lug9"
      >
        <div
          class="styles__8i9lug4 styles__8i9luga"
        >
          Legend
        </div>
        <span
          class="styles__8i9lug2 styles__8i9luga style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_24__m4c9ow23"
        >
          Minimum
        </span>
        <span
          class="styles__8i9lug2 styles__8i9luga style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_24__m4c9ow23"
        >
          Maximum
        </span>
        <span
          class="styles__8i9lug2 styles__8i9luga style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_24__m4c9ow23"
        >
          Average
        </span>
        <span
          class="styles__8i9lug2 styles__8i9luga style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_24__m4c9ow23"
        >
          Current
        </span>
      </div>
      <div
        class="styles__8i9lug8"
      >
        <div
          class="styles__8i9lugc"
        >
          <div
            class="styles__8i9lug4 styles__8i9lugd"
          >
            <div
              aria-disabled="false"
              class="styles__9pjq8o1"
              data-checked="true"
              data-error="false"
            >
              <input
                aria-checked="true"
                aria-invalid="false"
                class="styles__9pjq8o2"
                id="_r_1u_"
                name="lineChartMultiple1"
                type="checkbox"
              />
              <svg
                class="styles__9pjq8o3"
                fill="none"
                viewBox="0 0 24 24"
              >
                <g>
                  <rect
                    class="styles__9pjq8o4"
                    height="16"
                    rx="0.125rem"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    class="styles__9pjq8o5"
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
                style="--_4k0ekn3: 1;"
              >
                <div
                  class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
                  style="--_4k0ekn3: 1;"
                >
                  <label
                    class="styles__9pjq8o7"
                    for="_r_1u_"
                  >
                    <div
                      class="styles__8i9lug3"
                    >
                      <span
                        class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmall__m4c9owp style_undefined_compound_24__m4c9ow23"
                      >
                        Serie 1
                      </span>
                      <div
                        class="styles__8i9lugb"
                        data-testid="label-lineChartMultiple1"
                        style="--_8i9lug1: var(--rwwhsl2w);"
                      />
                    </div>
                  </label>
                </div>
              </div>
            </div>
          </div>
          <span
            class="styles__8i9lug2 styles__8i9luga style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmall__m4c9owp style_undefined_compound_24__m4c9ow23"
          >
            -9
          </span>
          <span
            class="styles__8i9lug2 styles__8i9luga style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmall__m4c9owp style_undefined_compound_24__m4c9ow23"
          >
            55
          </span>
          <span
            class="styles__8i9lug2 styles__8i9luga style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmall__m4c9owp style_undefined_compound_24__m4c9ow23"
          >
            9.27
          </span>
          <span
            class="styles__8i9lug2 styles__8i9luga style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmall__m4c9owp style_undefined_compound_24__m4c9ow23"
          >
            0
          </span>
        </div>
        <div
          class="styles__8i9lugc"
        >
          <div
            class="styles__8i9lug4 styles__8i9lugd"
          >
            <div
              aria-disabled="false"
              class="styles__9pjq8o1"
              data-checked="true"
              data-error="false"
            >
              <input
                aria-checked="true"
                aria-invalid="false"
                class="styles__9pjq8o2"
                id="_r_25_"
                name="lineChartMultiple2"
                type="checkbox"
              />
              <svg
                class="styles__9pjq8o3"
                fill="none"
                viewBox="0 0 24 24"
              >
                <g>
                  <rect
                    class="styles__9pjq8o4"
                    height="16"
                    rx="0.125rem"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    class="styles__9pjq8o5"
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
                style="--_4k0ekn3: 1;"
              >
                <div
                  class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
                  style="--_4k0ekn3: 1;"
                >
                  <label
                    class="styles__9pjq8o7"
                    for="_r_25_"
                  >
                    <div
                      class="styles__8i9lug3"
                    >
                      <span
                        class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmall__m4c9owp style_undefined_compound_24__m4c9ow23"
                      >
                        Serie 2
                      </span>
                      <div
                        class="styles__8i9lugb"
                        data-testid="label-lineChartMultiple2"
                        style="--_8i9lug1: var(--rwwhsl2x);"
                      />
                    </div>
                  </label>
                </div>
              </div>
            </div>
          </div>
          <span
            class="styles__8i9lug2 styles__8i9luga style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmall__m4c9owp style_undefined_compound_24__m4c9ow23"
          >
            -14
          </span>
          <span
            class="styles__8i9lug2 styles__8i9luga style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmall__m4c9owp style_undefined_compound_24__m4c9ow23"
          >
            76
          </span>
          <span
            class="styles__8i9lug2 styles__8i9luga style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmall__m4c9owp style_undefined_compound_24__m4c9ow23"
          >
            7.73
          </span>
          <span
            class="styles__8i9lug2 styles__8i9luga style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmall__m4c9owp style_undefined_compound_24__m4c9ow23"
          >
            0
          </span>
        </div>
        <div
          class="styles__8i9lugc"
        >
          <div
            class="styles__8i9lug4 styles__8i9lugd"
          >
            <div
              aria-disabled="false"
              class="styles__9pjq8o1"
              data-checked="true"
              data-error="false"
            >
              <input
                aria-checked="true"
                aria-invalid="false"
                class="styles__9pjq8o2"
                id="_r_2c_"
                name="lineChartMultiple3"
                type="checkbox"
              />
              <svg
                class="styles__9pjq8o3"
                fill="none"
                viewBox="0 0 24 24"
              >
                <g>
                  <rect
                    class="styles__9pjq8o4"
                    height="16"
                    rx="0.125rem"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    class="styles__9pjq8o5"
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
                style="--_4k0ekn3: 1;"
              >
                <div
                  class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
                  style="--_4k0ekn3: 1;"
                >
                  <label
                    class="styles__9pjq8o7"
                    for="_r_2c_"
                  >
                    <div
                      class="styles__8i9lug3"
                    >
                      <span
                        class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmall__m4c9owp style_undefined_compound_24__m4c9ow23"
                      >
                        Serie 3
                      </span>
                      <div
                        class="styles__8i9lugb"
                        data-testid="label-lineChartMultiple3"
                        style="--_8i9lug1: var(--rwwhsl2y);"
                      />
                    </div>
                  </label>
                </div>
              </div>
            </div>
          </div>
          <span
            class="styles__8i9lug2 styles__8i9luga style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmall__m4c9owp style_undefined_compound_24__m4c9ow23"
          >
            -38
          </span>
          <span
            class="styles__8i9lug2 styles__8i9luga style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmall__m4c9owp style_undefined_compound_24__m4c9ow23"
          >
            93
          </span>
          <span
            class="styles__8i9lug2 styles__8i9luga style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmall__m4c9owp style_undefined_compound_24__m4c9ow23"
          >
            21.53
          </span>
          <span
            class="styles__8i9lug2 styles__8i9luga style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmall__m4c9owp style_undefined_compound_24__m4c9ow23"
          >
            34
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`lineChart > renders correctly when legend is deselected 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      style="height: 537px;"
    >
      <div
        style="width: 100%; height: 100%;"
      />
    </div>
    <div
      class="styles__8i9lug5"
    >
      <div
        class="styles__8i9lug9"
      >
        <div
          class="styles__8i9lug4 styles__8i9luga"
        >
          Legend
        </div>
        <span
          class="styles__8i9lug2 styles__8i9luga style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_24__m4c9ow23"
        >
          Minimum
        </span>
        <span
          class="styles__8i9lug2 styles__8i9luga style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_24__m4c9ow23"
        >
          Maximum
        </span>
        <span
          class="styles__8i9lug2 styles__8i9luga style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_24__m4c9ow23"
        >
          Average
        </span>
        <span
          class="styles__8i9lug2 styles__8i9luga style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_24__m4c9ow23"
        >
          Current
        </span>
      </div>
      <div
        class="styles__8i9lug8"
      >
        <div
          class="styles__8i9lugc"
        >
          <div
            class="styles__8i9lug4 styles__8i9lugd"
          >
            <div
              aria-disabled="false"
              class="styles__9pjq8o1"
              data-checked="false"
              data-error="false"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                checked=""
                class="styles__9pjq8o2"
                id="_r_1j_"
                name="lineChartSerie"
                type="checkbox"
              />
              <svg
                class="styles__9pjq8o3"
                fill="none"
                viewBox="0 0 24 24"
              >
                <g>
                  <rect
                    class="styles__9pjq8o4"
                    height="16"
                    rx="0.125rem"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    class="styles__9pjq8o5"
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
                style="--_4k0ekn3: 1;"
              >
                <div
                  class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
                  style="--_4k0ekn3: 1;"
                >
                  <label
                    class="styles__9pjq8o7"
                    for="_r_1j_"
                  >
                    <div
                      class="styles__8i9lug3"
                    >
                      <span
                        class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmall__m4c9owp style_undefined_compound_24__m4c9ow23"
                      >
                        line chart values
                      </span>
                      <div
                        class="styles__8i9lugb"
                        data-testid="label-lineChartSerie"
                        style="--_8i9lug1: var(--rwwhsl2w);"
                      />
                    </div>
                  </label>
                </div>
              </div>
            </div>
          </div>
          <span
            class="styles__8i9lug2 styles__8i9luga style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmall__m4c9owp style_undefined_compound_24__m4c9ow23"
          >
            -7
          </span>
          <span
            class="styles__8i9lug2 styles__8i9luga style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmall__m4c9owp style_undefined_compound_24__m4c9ow23"
          >
            7
          </span>
          <span
            class="styles__8i9lug2 styles__8i9luga style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmall__m4c9owp style_undefined_compound_24__m4c9ow23"
          >
            0.2
          </span>
          <span
            class="styles__8i9lug2 styles__8i9luga style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmall__m4c9owp style_undefined_compound_24__m4c9ow23"
          >
            7
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`lineChart > renders correctly with data 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      style="height: 537px;"
    >
      <div
        style="width: 100%; height: 100%;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`lineChart > renders correctly with data transformer 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      style="height: 537px;"
    >
      <div
        style="width: 100%; height: 100%;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`lineChart > renders correctly with detailed legend 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      style="height: 537px;"
    >
      <div
        style="width: 100%; height: 100%;"
      />
    </div>
    <div
      class="styles__8i9lug5"
    >
      <div
        class="styles__8i9lug9"
      >
        <div
          class="styles__8i9lug4 styles__8i9luga"
        >
          Legend
        </div>
        <span
          class="styles__8i9lug2 styles__8i9luga style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_24__m4c9ow23"
        >
          Minimum
        </span>
        <span
          class="styles__8i9lug2 styles__8i9luga style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_24__m4c9ow23"
        >
          Maximum
        </span>
        <span
          class="styles__8i9lug2 styles__8i9luga style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_24__m4c9ow23"
        >
          Average
        </span>
        <span
          class="styles__8i9lug2 styles__8i9luga style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_24__m4c9ow23"
        >
          Current
        </span>
      </div>
      <div
        class="styles__8i9lug8"
      >
        <div
          class="styles__8i9lugc"
        >
          <div
            class="styles__8i9lug4 styles__8i9lugd"
          >
            <div
              aria-disabled="false"
              class="styles__9pjq8o1"
              data-checked="true"
              data-error="false"
            >
              <input
                aria-checked="true"
                aria-invalid="false"
                checked=""
                class="styles__9pjq8o2"
                id="_r_4_"
                name="lineChartSerie"
                type="checkbox"
              />
              <svg
                class="styles__9pjq8o3"
                fill="none"
                viewBox="0 0 24 24"
              >
                <g>
                  <rect
                    class="styles__9pjq8o4"
                    height="16"
                    rx="0.125rem"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    class="styles__9pjq8o5"
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
                style="--_4k0ekn3: 1;"
              >
                <div
                  class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
                  style="--_4k0ekn3: 1;"
                >
                  <label
                    class="styles__9pjq8o7"
                    for="_r_4_"
                  >
                    <div
                      class="styles__8i9lug3"
                    >
                      <span
                        class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmall__m4c9owp style_undefined_compound_24__m4c9ow23"
                      >
                        line chart values
                      </span>
                      <div
                        class="styles__8i9lugb"
                        data-testid="label-lineChartSerie"
                        style="--_8i9lug1: var(--rwwhsl2w);"
                      />
                    </div>
                  </label>
                </div>
              </div>
            </div>
          </div>
          <span
            class="styles__8i9lug2 styles__8i9luga style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmall__m4c9owp style_undefined_compound_24__m4c9ow23"
          >
            -7
          </span>
          <span
            class="styles__8i9lug2 styles__8i9luga style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmall__m4c9owp style_undefined_compound_24__m4c9ow23"
          >
            7
          </span>
          <span
            class="styles__8i9lug2 styles__8i9luga style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmall__m4c9owp style_undefined_compound_24__m4c9ow23"
          >
            0.2
          </span>
          <span
            class="styles__8i9lug2 styles__8i9luga style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmall__m4c9owp style_undefined_compound_24__m4c9ow23"
          >
            7
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`lineChart > renders correctly with multiple series 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      style="height: 537px;"
    >
      <div
        style="width: 100%; height: 100%;"
      />
    </div>
    <div
      class="styles__8i9lug5"
    >
      <div
        class="styles__8i9lug9"
      >
        <div
          class="styles__8i9lug4 styles__8i9luga"
        >
          Legend
        </div>
        <span
          class="styles__8i9lug2 styles__8i9luga style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_24__m4c9ow23"
        >
          Minimum
        </span>
        <span
          class="styles__8i9lug2 styles__8i9luga style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_24__m4c9ow23"
        >
          Maximum
        </span>
        <span
          class="styles__8i9lug2 styles__8i9luga style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_24__m4c9ow23"
        >
          Average
        </span>
        <span
          class="styles__8i9lug2 styles__8i9luga style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_24__m4c9ow23"
        >
          Current
        </span>
      </div>
      <div
        class="styles__8i9lug8"
      >
        <div
          class="styles__8i9lugc"
        >
          <div
            class="styles__8i9lug4 styles__8i9lugd"
          >
            <div
              aria-disabled="false"
              class="styles__9pjq8o1"
              data-checked="true"
              data-error="false"
            >
              <input
                aria-checked="true"
                aria-invalid="false"
                checked=""
                class="styles__9pjq8o2"
                id="_r_q_"
                name="lineChartMultiple1"
                type="checkbox"
              />
              <svg
                class="styles__9pjq8o3"
                fill="none"
                viewBox="0 0 24 24"
              >
                <g>
                  <rect
                    class="styles__9pjq8o4"
                    height="16"
                    rx="0.125rem"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    class="styles__9pjq8o5"
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
                style="--_4k0ekn3: 1;"
              >
                <div
                  class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
                  style="--_4k0ekn3: 1;"
                >
                  <label
                    class="styles__9pjq8o7"
                    for="_r_q_"
                  >
                    <div
                      class="styles__8i9lug3"
                    >
                      <span
                        class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmall__m4c9owp style_undefined_compound_24__m4c9ow23"
                      >
                        Serie 1
                      </span>
                      <div
                        class="styles__8i9lugb"
                        data-testid="label-lineChartMultiple1"
                        style="--_8i9lug1: var(--rwwhsl2w);"
                      />
                    </div>
                  </label>
                </div>
              </div>
            </div>
          </div>
          <span
            class="styles__8i9lug2 styles__8i9luga style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmall__m4c9owp style_undefined_compound_24__m4c9ow23"
          >
            -9
          </span>
          <span
            class="styles__8i9lug2 styles__8i9luga style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmall__m4c9owp style_undefined_compound_24__m4c9ow23"
          >
            55
          </span>
          <span
            class="styles__8i9lug2 styles__8i9luga style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmall__m4c9owp style_undefined_compound_24__m4c9ow23"
          >
            9.27
          </span>
          <span
            class="styles__8i9lug2 styles__8i9luga style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmall__m4c9owp style_undefined_compound_24__m4c9ow23"
          >
            0
          </span>
        </div>
        <div
          class="styles__8i9lugc"
        >
          <div
            class="styles__8i9lug4 styles__8i9lugd"
          >
            <div
              aria-disabled="false"
              class="styles__9pjq8o1"
              data-checked="true"
              data-error="false"
            >
              <input
                aria-checked="true"
                aria-invalid="false"
                checked=""
                class="styles__9pjq8o2"
                id="_r_11_"
                name="lineChartMultiple2"
                type="checkbox"
              />
              <svg
                class="styles__9pjq8o3"
                fill="none"
                viewBox="0 0 24 24"
              >
                <g>
                  <rect
                    class="styles__9pjq8o4"
                    height="16"
                    rx="0.125rem"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    class="styles__9pjq8o5"
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
                style="--_4k0ekn3: 1;"
              >
                <div
                  class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
                  style="--_4k0ekn3: 1;"
                >
                  <label
                    class="styles__9pjq8o7"
                    for="_r_11_"
                  >
                    <div
                      class="styles__8i9lug3"
                    >
                      <span
                        class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmall__m4c9owp style_undefined_compound_24__m4c9ow23"
                      >
                        Serie 2
                      </span>
                      <div
                        class="styles__8i9lugb"
                        data-testid="label-lineChartMultiple2"
                        style="--_8i9lug1: var(--rwwhsl2x);"
                      />
                    </div>
                  </label>
                </div>
              </div>
            </div>
          </div>
          <span
            class="styles__8i9lug2 styles__8i9luga style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmall__m4c9owp style_undefined_compound_24__m4c9ow23"
          >
            -14
          </span>
          <span
            class="styles__8i9lug2 styles__8i9luga style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmall__m4c9owp style_undefined_compound_24__m4c9ow23"
          >
            76
          </span>
          <span
            class="styles__8i9lug2 styles__8i9luga style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmall__m4c9owp style_undefined_compound_24__m4c9ow23"
          >
            7.73
          </span>
          <span
            class="styles__8i9lug2 styles__8i9luga style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmall__m4c9owp style_undefined_compound_24__m4c9ow23"
          >
            0
          </span>
        </div>
        <div
          class="styles__8i9lugc"
        >
          <div
            class="styles__8i9lug4 styles__8i9lugd"
          >
            <div
              aria-disabled="false"
              class="styles__9pjq8o1"
              data-checked="true"
              data-error="false"
            >
              <input
                aria-checked="true"
                aria-invalid="false"
                checked=""
                class="styles__9pjq8o2"
                id="_r_18_"
                name="lineChartMultiple3"
                type="checkbox"
              />
              <svg
                class="styles__9pjq8o3"
                fill="none"
                viewBox="0 0 24 24"
              >
                <g>
                  <rect
                    class="styles__9pjq8o4"
                    height="16"
                    rx="0.125rem"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    class="styles__9pjq8o5"
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
                style="--_4k0ekn3: 1;"
              >
                <div
                  class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
                  style="--_4k0ekn3: 1;"
                >
                  <label
                    class="styles__9pjq8o7"
                    for="_r_18_"
                  >
                    <div
                      class="styles__8i9lug3"
                    >
                      <span
                        class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmall__m4c9owp style_undefined_compound_24__m4c9ow23"
                      >
                        Serie 3
                      </span>
                      <div
                        class="styles__8i9lugb"
                        data-testid="label-lineChartMultiple3"
                        style="--_8i9lug1: var(--rwwhsl2y);"
                      />
                    </div>
                  </label>
                </div>
              </div>
            </div>
          </div>
          <span
            class="styles__8i9lug2 styles__8i9luga style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmall__m4c9owp style_undefined_compound_24__m4c9ow23"
          >
            -38
          </span>
          <span
            class="styles__8i9lug2 styles__8i9luga style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmall__m4c9owp style_undefined_compound_24__m4c9ow23"
          >
            93
          </span>
          <span
            class="styles__8i9lug2 styles__8i9luga style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmall__m4c9owp style_undefined_compound_24__m4c9ow23"
          >
            21.53
          </span>
          <span
            class="styles__8i9lug2 styles__8i9luga style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmall__m4c9owp style_undefined_compound_24__m4c9ow23"
          >
            34
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`lineChart > renders correctly with point formatter 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      style="height: 537px;"
    >
      <div
        style="width: 100%; height: 100%;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`lineChart > renders correctly with timeline data 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      style="height: 537px;"
    >
      <div
        style="width: 100%; height: 100%;"
      />
    </div>
    <div
      class="styles__8i9lug5"
    >
      <div
        class="styles__8i9lug9"
      >
        <div
          class="styles__8i9lug4 styles__8i9luga"
        >
          Legend
        </div>
        <span
          class="styles__8i9lug2 styles__8i9luga style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_24__m4c9ow23"
        >
          Minimum
        </span>
        <span
          class="styles__8i9lug2 styles__8i9luga style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_24__m4c9ow23"
        >
          Maximum
        </span>
        <span
          class="styles__8i9lug2 styles__8i9luga style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_24__m4c9ow23"
        >
          Average
        </span>
        <span
          class="styles__8i9lug2 styles__8i9luga style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_24__m4c9ow23"
        >
          Current
        </span>
      </div>
      <div
        class="styles__8i9lug8"
      >
        <div
          class="styles__8i9lugc"
        >
          <div
            class="styles__8i9lug4 styles__8i9lugd"
          >
            <div
              aria-disabled="false"
              class="styles__9pjq8o1"
              data-checked="true"
              data-error="false"
            >
              <input
                aria-checked="true"
                aria-invalid="false"
                checked=""
                class="styles__9pjq8o2"
                id="_r_f_"
                name="lineChartHours"
                type="checkbox"
              />
              <svg
                class="styles__9pjq8o3"
                fill="none"
                viewBox="0 0 24 24"
              >
                <g>
                  <rect
                    class="styles__9pjq8o4"
                    height="16"
                    rx="0.125rem"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    class="styles__9pjq8o5"
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
                style="--_4k0ekn3: 1;"
              >
                <div
                  class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
                  style="--_4k0ekn3: 1;"
                >
                  <label
                    class="styles__9pjq8o7"
                    for="_r_f_"
                  >
                    <div
                      class="styles__8i9lug3"
                    >
                      <span
                        class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmall__m4c9owp style_undefined_compound_24__m4c9ow23"
                      >
                        line chart hours values
                      </span>
                      <div
                        class="styles__8i9lugb"
                        data-testid="label-lineChartHours"
                        style="--_8i9lug1: var(--rwwhsl2w);"
                      />
                    </div>
                  </label>
                </div>
              </div>
            </div>
          </div>
          <span
            class="styles__8i9lug2 styles__8i9luga style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmall__m4c9owp style_undefined_compound_24__m4c9ow23"
          >
            -14
          </span>
          <span
            class="styles__8i9lug2 styles__8i9luga style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmall__m4c9owp style_undefined_compound_24__m4c9ow23"
          >
            76
          </span>
          <span
            class="styles__8i9lug2 styles__8i9luga style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmall__m4c9owp style_undefined_compound_24__m4c9ow23"
          >
            7.73
          </span>
          <span
            class="styles__8i9lug2 styles__8i9luga style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmall__m4c9owp style_undefined_compound_24__m4c9ow23"
          >
            0
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`lineChart > renders correctly without data 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      style="height: 537px;"
    >
      <div
        style="width: 100%; height: 100%;"
      />
    </div>
  </div>
</DocumentFragment>
`;
